jwt token auth added + swagger update api
